--- a/main.html
+++ b/main.html
@@ -94,6 +94,7 @@
         </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
+
