--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-gray-100 text-gray-800 font-[Inter,sans-serif]">
 
@@ -97,4 +97,5 @@
     <script src="scripts/main.js"></script>
 </body>
 </html>
+
 
