--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
                         </h3>
                         <div class="collapsible-content p-4" id="pregatire-list">
                             <p class="loading-message text-gray-500">Se încarcă datele...</p>
-                            </div>
+                        </div>
                     </div>
                     <div class="collapsible-section bg-white rounded-lg shadow-sm">
                         <h3 class="collapsible-header flex justify-between items-center p-4 cursor-pointer border-b border-gray-200">
@@ -73,10 +73,13 @@
                             <label for="pdf-file" class="block mb-2 text-sm font-medium text-gray-700">Factura (.pdf):</label>
                             <input type="file" id="pdf-file" name="pdfFile" accept=".pdf" required class="w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none">
                         </div>
-                        <button type="submit" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-3 text-center">
-                            Trimite fișierele 🚀
+                        
+                        <p id="upload-status" class="mt-4 text-center text-sm font-medium min-h-[20px]"></p>
+
+                        <button id="upload-button" type="submit" class="w-full mt-2 flex justify-center items-center px-4 py-3 text-lg font-bold text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition disabled:bg-blue-300">
+                            <span class="button-text">Trimite fișierele 🚀</span>
+                            <div class="button-loader hidden w-6 h-6 border-4 border-white border-t-transparent border-solid rounded-full animate-spin"></div>
                         </button>
-                        <p id="status" class="mt-4 text-center text-sm font-medium text-gray-600"></p>
                     </form>
                  </div>
             </div>
@@ -97,5 +100,3 @@
     <script src="scripts/main.js"></script>
 </body>
 </html>
-
-
