--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
     <script src="scripts/login.js" defer></script>
+    <script src="scripts/login.js" type="module" defer></script>
 </head>
 <body class="bg-gray-100">
 
