--- a/main.html
+++ b/main.html
@@ -5,96 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager Stocuri</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css">
+    <script>
+        if (sessionStorage.getItem('isLoggedIn') !== 'true') window.location.href = 'index.html';
+    </script>
 </head>
-<body class="bg-gray-100 text-gray-800 font-[Inter,sans-serif]">
-
+<body class="bg-gray-100 font-sans text-gray-800">
     <div class="flex h-screen">
         <aside class="w-64 bg-white shadow-lg flex flex-col">
             <div class="p-6 border-b border-gray-200">
                 <h1 class="text-2xl font-bold text-gray-700">Manager Stocuri</h1>
             </div>
             <nav class="flex-1 p-4 space-y-2">
-                <button class="sidebar-btn active-tab flex items-center w-full text-left p-3 rounded-lg" data-tab="comenzi">
+                <button data-view="comenzi" class="sidebar-btn active-tab flex items-center w-full text-left p-3 rounded-lg">
                     <span class="material-symbols-outlined mr-3">apps</span>
                     <span>Toate Comenzile</span>
                 </button>
-                <button class="sidebar-btn flex items-center w-full text-left p-3 rounded-lg" data-tab="import">
+                <button data-view="import" class="sidebar-btn flex items-center w-full text-left p-3 rounded-lg">
                     <span class="material-symbols-outlined mr-3">upload_file</span>
                     <span>Import Comandă Nouă</span>
                 </button>
-                <button class="sidebar-btn flex items-center w-full text-left p-3 rounded-lg" data-tab="imprimanta">
-                    <span class="material-symbols-outlined mr-3">print</span>
-                    <span>Imprimantă</span>
-                </button>
             </nav>
-            <div class="p-4 border-t border-gray-200">
-                <p class="text-xs text-gray-500">© 2025 Compania Ta</p>
-            </div>
+            <div class="p-4 border-t border-gray-200"><p class="text-xs text-gray-500">© 2025</p></div>
         </aside>
 
-        <main class="flex-1 p-6 sm:p-8 overflow-y-auto">
-            
-            <div id="comenzi" class="tab-content">
-                <h2 class="text-3xl font-bold text-gray-800 mb-6">Panou de Comenzi</h2>
-                <div class="max-w-3xl">
-                    <div class="collapsible-section bg-white rounded-lg shadow-sm mb-4">
-                        <h3 class="collapsible-header flex justify-between items-center p-4 cursor-pointer border-b border-gray-200">
-                            <span>Comenzi în Pregătire</span>
-                            <span class="arrow transform rotate-180">▲</span>
-                        </h3>
-                        <div class="collapsible-content p-4" id="pregatire-list">
-                            <p class="loading-message text-gray-500">Se încarcă datele...</p>
-                        </div>
-                    </div>
-                    <div class="collapsible-section bg-white rounded-lg shadow-sm">
-                        <h3 class="collapsible-header flex justify-between items-center p-4 cursor-pointer border-b border-gray-200">
-                            <span>Comenzi Finalizate</span>
-                            <span class="arrow">▼</span>
-                        </h3>
-                        <div class="collapsible-content hidden p-4" id="finalizate-list">
-                             <p class="text-gray-500">Nicio comandă finalizată de afișat.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div id="import" class="tab-content hidden">
-                 <h2 class="text-3xl font-bold text-gray-800 mb-6">Import Comandă Nouă</h2>
-                 <div class="max-w-md bg-white p-8 rounded-lg shadow-md">
-                    <form id="upload-form">
-                        <div class="mb-5">
-                            <label for="zip-file" class="block mb-2 text-sm font-medium text-gray-700">Manifest (.zip):</label>
-                            <input type="file" id="zip-file" name="zipFile" accept=".zip" required class="w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none">
-                        </div>
-                        <div class="mb-6">
-                            <label for="pdf-file" class="block mb-2 text-sm font-medium text-gray-700">Factura (.pdf):</label>
-                            <input type="file" id="pdf-file" name="pdfFile" accept=".pdf" required class="w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none">
-                        </div>
-                        
-                        <p id="upload-status" class="mt-4 text-center text-sm font-medium min-h-[20px]"></p>
-
-                        <button id="upload-button" type="submit" class="w-full mt-2 flex justify-center items-center px-4 py-3 text-lg font-bold text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition disabled:bg-blue-300">
-                            <span class="button-text">Trimite fișierele 🚀</span>
-                            <div class="button-loader hidden w-6 h-6 border-4 border-white border-t-transparent border-solid rounded-full animate-spin"></div>
-                        </button>
-                    </form>
-                 </div>
-            </div>
-
-            <div id="imprimanta" class="tab-content hidden">
-                 <h2 class="text-3xl font-bold text-gray-800 mb-6">Setări Imprimantă</h2>
-                 <div class="max-w-md bg-white p-8 rounded-lg shadow-md">
-                    <p class="text-gray-600">Aici vor fi opțiunile și setările pentru imprimantă.</p>
-                    <button class="mt-4 text-white bg-gray-600 hover:bg-gray-700 font-medium rounded-lg text-sm px-5 py-2.5">
-                        Configurează Imprimanta
-                    </button>
-                 </div>
-            </div>
-
-        </main>
+        <main id="main-content" class="flex-1 overflow-y-auto">
+            </main>
     </div>
 
     <script src="scripts/main.js" type="module"></script>
