--- a/main.html
+++ b/main.html
@@ -31,7 +31,16 @@
                     <span class="material-symbols-outlined mr-3">upload_file</span>
                     <span>Import Comandă Nouă</span>
                 </button>
-            </nav>
+                
+                <button data-view="financiar" class="sidebar-btn flex items-center w-full text-left p-3 rounded-lg">
+                    <span class="material-symbols-outlined mr-3">payments</span>
+                    <span>Financiar</span>
+                </button>
+                <button data-view="exportDate" class="sidebar-btn flex items-center w-full text-left p-3 rounded-lg">
+                    <span class="material-symbols-outlined mr-3">download</span>
+                    <span>Export Date</span>
+                </button>
+                </nav>
             <div class="p-4 border-t border-gray-200"><p class="text-xs text-gray-500">© 2025</p></div>
         </aside>
 
