--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Autentificare - Off-Site</title>
+    <title>Autentificare - Manager Stocuri</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
+    
     <script src="scripts/login.js" type="module" defer></script>
 </head>
 <body class="bg-gray-100">
@@ -19,7 +20,7 @@
             <span class="material-symbols-outlined text-6xl text-[var(--primary-color)]">
                 inventory_2
             </span>
-            <h1 class="text-3xl font-bold text-gray-800 mt-2">Manager Off-Site</h1>
+            <h1 class="text-3xl font-bold text-gray-800 mt-2">Manager Stocuri</h1>
             <p class="text-gray-500">Introduceți codul de acces</p>
         </div>
 
