--- a/main.html
+++ b/main.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.2/Sortable.min.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.1/jspdf.plugin.autotable.min.js"></script>
 
     <script>
         if (sessionStorage.getItem('isLoggedIn') !== 'true') window.location.href = 'index.html';
@@ -68,5 +71,5 @@
         <div id="lightbox-thumbs-container" class="w-full max-w-lg grid grid-cols-5 gap-2 mt-4 p-2 overflow-x-auto">
             </div>
     </div>
-    </body>
+</body>
 </html>
